# AKASH-Atmospheric-Knowledge-AQI-from-Satellite-Harmonics-

./: .gitignore  BOUNDARY_TIMESTAMP_VERIFICATION.csv  CALENDAR_DATE_RECONCILIATION.csv  CHANGELOG.md  DATASET_INTEGRITY_REPORT.csv  DOCUMENTATION_CONSISTENCY_REPORT.md  FEATURE_COMPLETENESS.csv  FINAL_ACCEPTANCE_CERTIFICATE.md  FINAL_PROJECT_AUDIT_REPORT.md  MERGE_VALIDATION.csv  PIPELINE_REPRODUCIBILITY.md  PRODUCTION_CHECKLIST.csv  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_VERIFICATION.md  PROJECT_CONFIG.yaml  PROJECT_READINESS_MATRIX.csv  PROJECT_SCORECARD.csv  PROJECT_VERIFICATION_EVIDENCE.md  README.md  REAL_DATASET_VERIFICATION.csv  REPORT_CONSISTENCY_MATRIX.csv  REPOSITORY_INVENTORY.csv  SCIENTIFIC_VALIDATION.csv  SPATIAL_VALIDATION.csv  SUPPLEMENTARY_AUDIT_REPORT.md  TEMPORAL_COVERAGE_CLARIFICATION.md  TEMPORAL_COVERAGE_SUMMARY.csv  TEMPORAL_DATE_DISTRIBUTION.csv  TEMPORAL_VALIDATION.csv  TEST_EXECUTION_REPORT.csv  UPDATED_FINAL_AUDIT_CHANGELOG.md  UPDATED_PROJECT_READINESS_MATRIX.csv  analysis_ready_dataset.csv  before_after_dataset_comparison.csv  coordinate_resolution_report.csv  correlation_matrix.csv  credentials_checkpoint.json  credentials_verification_report.md  dataset_evidence_catalog.csv  dataset_schema_report.csv  (+55 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: .gitkeep  20260706_0000_a1b2c3d4e5f6_enable_postgis_extensions.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  aqi.py  fire.py  forecast.py  hcho.py  health.py  stations.py  version.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py
backend/app/schemas/: __init__.py  aqi.py  fire.py  forecast.py  hcho.py  health.py  stations.py  version.py
backend/app/services/: __init__.py  aqi_service.py  base.py  fire_service.py  forecast_service.py  hcho_service.py  station_service.py
backend/docker/: entrypoint.sh  init-db.sql
backend/tests/: __init__.py  conftest.py  test_health.py
dashboard/: app.py  requirements.txt
data_collection_pipeline/: README.md  __init__.py  aqi_calculator.py  config.py  config.yaml  config_loader.py  cpcb_collector.py  data_validation_v2.py  dataset_merger.py  dlq.py  era5_downloader.py  era5_historical.py  era5_processor.py  era5_validator.py  exceptions.py  main.py  metadata_builder.py  modis_historical.py  openaq_collector.py  pbl_feature_engine.py  requirements.txt  sentinel5p_collector.py  sentinel5p_historical.py  setup.py  static_features.py  utils.py
docs/: earth_engine.md  historical_ingestion_architecture.md
documentation/: feature_validation_checkpoint.json  feature_validation_report.md  gee_availability_report.md
historical_data/: historical_validation_report.md
historical_ingestor/: __init__.py  config.py  downloader.py  location_fetcher.py  (+4 more)
(+182 files in other folders)
