[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vayu-drishti-backend"
version = "0.1.0"
description = "VAYU-DRISHTI — Air quality monitoring and geospatial analytics platform (Backend API)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VAYU-DRISHTI Engineering Team" }]
keywords = ["air-quality", "geospatial", "fastapi", "postgis", "iot"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
]

# ── Ruff (Linter) ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "S101",  # assert usage — permitted in tests
    "B008",  # do not perform function calls in default arguments (FastAPI Depends pattern)
    "N818",  # exception names — our hierarchy uses custom suffixes
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PT"]  # Relax security and pytest-style rules in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Black (Formatter) ──────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

# ── Mypy (Type Checker) ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "structlog.*"]
ignore_missing_imports = true

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "integration: marks tests that require a live database (deselect with '-m not integration')",
    "unit: marks fast, isolated unit tests",
]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["app/db/models/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
